# tetris

./: CMakeLists.txt  common.hpp  main.cpp  paintwidget.cpp  paintwidget.h  scattersearch.cpp  scattersearch.hpp
diagrams/: 23-11-2016_17-51-45.tex  24-11-2016_14-37-25.tex
inputs/: HT01.csv
